# BOND

./: .env  .env.example  .gitattributes  .gitignore  BOND.mmd  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  Makefile  README.md  README_hybrid_search.md  RERANKER_TRAINING_GUIDE.md  env.example  extract_unique_terms_for_harmonization.py  hybrid_search.py  paper.md  pyproject.toml  requirements.txt
Miscellaneous/: bond_documentation.txt  filtered_ontologies_structure.txt  generate_bond_documentation.py  ingest_umls_full_pipeline.py  lungmap_provisional_ingest.py
assets/: abbreviations.json  ontologies.sqlite
benchmark-metrics/: .gitignore  benchmark-200.csv  evaluate_benchmark.py  tabular_sapiens_test_with_tissue.csv
bond/: __init__.py  abbrev.py  cli.py  config.py  field_guidance.py  fusion.py  fusion_weights.py  graph_utils.py  llm.py  logger.py  models.py  pipeline.py  prompts.py  providers.py  rerank.py  rules.py  runtime_env.py  schema_policies.py  server.py  validate_signature.py
bond_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bond_input/: assay_unique_terms.json  cell_type_unique_terms.json  development_stage_unique_terms.json  disease_unique_terms.json  extraction_summary.json  self_reported_ethnicity_unique_terms.json  sex_unique_terms.json  tissue_unique_terms.json
bond_output/: assay_predictions.csv  cell_type_predictions.csv  development_stage_predictions.csv  disease_predictions.csv  self_reported_ethnicity_predictions.csv  sex_predictions.csv  tissue_predictions.csv
evals/: bond_benchmark_test.csv
(+113 files in other folders)
